--- a/estudos_css/estilos/estilos.css
+++ b/estudos_css/estilos/estilos.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+NL:wght@100..400&display=swap');
 
+#gradiente{
+    width: 100%;
+    height: 1000px;
+    background-image: linear-gradient(white, blue )
+}
 a{
     text-decoration: none;
 }
-
 body{
     background-color: #ccc;
 }
@@ -11,6 +15,21 @@ p{
    text-align: center;
     color: rgb(80, 80, 80);
     margin-bottom: 20px;
+}
+.conteiner{
+    width: 40%;
+    height: 425px;
+    background: rgb(255, 255, 255);
+    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    text-align: center;
+    text-decoration: none;
+}
+.conteiner:hover{
+    height: auto;
+    padding: 1%;
+    background: #ccc;
+    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    white-space: normal;
 }
 .topo{
     text-align: center;
@@ -26,14 +45,17 @@ font-size: 110%;
 font-family: "Playwrite NL", cursive;
 font: weight 900px;
 }
-
 .botao{
     margin-left: 40%;
     background-color: aquamarine;
     padding: 10px;
     border-radius: 30px;
+    position: fixed;
 }
-
+.multiplas{
+    color: black;
+    text-shadow:0 0 3px rebeccapurple, 2px 2px 4px purple
+}
 .teste{
     max-width: 100%;
     background-color: aquamarine;
@@ -41,10 +63,12 @@ font: weight 900px;
 #rodape{
     color: rgb(212, 212, 125);
     background-color: #b4b3b3;
-    height: 150px;
+    height: 190px;
+    max-height: 200px;
 }
 
 a.botao1{
+    
     background-color: darkgreen;
     color: white;
     padding: 10px;
@@ -62,12 +86,14 @@ a.botao1:hover{
 }
 
 a.botao2{
+    text-shadow: 1px 1px 5px black;
     color: black;
     text-decoration: none;
     padding: 8px;
     border: 2px solid rgb(0, 0, 0);
 }
 a.botao2:hover{
+    text-shadow: 3px 4px 4px #d81a1a;
     color: white;
     background-color: black;
     padding: 9px;
@@ -100,4 +126,23 @@ a.botao4:hover{
 }
 a.botao5{
 cursor: alias;
+}
+.reduzido{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.reduzido:hover{
+    white-space: normal;
+}
+
+.flex-pai{
+
+display: flex;
+height: 55px;
+padding-top:20px ;
+background: gray;
+}
+.flex-pai div{
+    margin: 10px;
 }
